flux/infrastructure/micro/services/qr-generator/ingressroute.yaml
# Auto-split from cluster files
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qr-generator
  namespace: micro
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`qr.tools.becklab.cloud`)
    kind: Rule
    services:
    - name: qr-generator
      port: 80
      sticky: false
